--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cocotte-logger",
   "description": "ログファイルを作成しメッセージを追加します",
-  "homepage": "https://github.com/yukik",
+  "homepage": "https://github.com/yukik/cocotte-logger",
   "keywords": [
     "log",
     "cocotte"
